--- a/package.json
+++ b/package.json
@@ -9,20 +9,27 @@
     "build": "node app.js build"
   },
   "dependencies": {
+    "@types/multer": "^1.4.7",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "express-validation": "^4.1.0",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "mongodb": "^5.6.0",
     "mongoose": "^7.2.0",
     "moongose": "^1.0.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
+    "socket.io": "^4.6.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17"
   }
