--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "1.0.0",
   "main": "app.js",
   "license": "MIT",
+  "type": "module",
   "scripts": {
-    "start": "node app.ts",
-    "serve": "nodemon app.ts",
+    "start": "node app.js",
+    "serve": "nodemon app.js",
     "build": "node app.js build"
   },
   "dependencies": {
-    "@types/multer": "^1.4.7",
+    
+   
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -23,14 +25,11 @@
     "moongose": "^1.0.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
-    "socket.io": "^4.6.2",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.3"
+    "socket.io": "^4.6.2"
+    
+   
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/cookie-parser": "^1.4.3",
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17"
+
   }
 }
